--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
+    "react-native-flipper-performance-plugin": "^0.4.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
