--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@tanstack/react-query": "^4.29.14",
     "@types/react-native": "^0.72.2",
     "axios": "^1.4.0",
+    "jotai": "^2.2.0",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "^0.71.8",
     "react-native-gesture-handler": "^2.10.2",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-reanimated": "^3.2.0",
@@ -41,11 +43,11 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
-    "dotenv": "^16.1.4",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.8",
     "react-native-flipper-performance-plugin": "^0.4.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
